# ml-nids

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
agent/: README.md  config.example.json  pyproject.toml
agent/livecap_agent/: capture.py  client.py  config.py  flows.py  interfaces.py  main.py  metadata.py  storage.py  tools.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260519_0001_initial_schema.py  20260525_0002_live_sessions.py  20260525_0003_live_session_cascade.py
backend/app/: __init__.py  cli.py  config.py  database.py  dependencies.py  exceptions.py  main.py  security.py
backend/app/api/v1/: agents.py  auth.py  captures.py  dashboard.py  flows.py  live_sessions.py  models.py  reports.py  router.py  ws.py
backend/app/inference/: __init__.py  architectures.py  base.py  compat.py  factory.py  postfilter.py  sklearn_strategy.py  torch_autoencoder.py  torch_supervised.py  validation.py
backend/app/models/: __init__.py  agent.py  capture_session.py  common.py  flow.py  live_session.py  ml_model.py  report.py  user.py
backend/app/repositories/: agent_repository.py  capture_session_repository.py  flow_repository.py  live_session_repository.py  model_repository.py  report_repository.py  user_repository.py
backend/app/schemas/: __init__.py  agent.py  analytics.py  capture.py  flow.py  live_session.py  ml_model.py  report.py  user.py
backend/app/services/: agent_service.py  auth_service.py  capture_analytics_service.py  capture_service.py  dashboard_service.py  flow_service.py  flow_storage_service.py  inference_service.py  live_session_service.py  model_registry.py  model_service.py  nfstream_settings.py  offline_csv_service.py  offline_pcap_service.py  report_service.py
backend/tests/: conftest.py  test_agents_api.py  test_analytics_api.py  test_auth_api.py  test_feature_validation.py  test_flow_schema.py  test_flows_api.py  test_live_sessions_api.py  test_model_registry.py  test_models_api.py  test_reports_api.py
(+65 files in other folders)
