[project]
name = "livecap-agent"
version = "0.1.0"
description = "Host-side sensor agent for ML-NIDS"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
livecap-agent = "livecap_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["livecap_agent"]
