[project]
name = "ml-nids-backend"
version = "0.1.0"
description = "FastAPI backend for ML-based network anomaly detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "bcrypt<4.1",
    "fastapi>=0.111.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.31",
    "uvicorn[standard]>=0.30.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
]
ml = [
    "joblib>=1.4.2",
    "lightgbm>=4.4.0",
    "numpy>=2.0,<3.0",
    "nfstream>=6.5.4",
    "pandas>=2.2.2,<4.0",
    "pyarrow>=16.1.0",
    "scikit-learn>=1.8.0,<1.9",
    "xgboost-cpu>=2.1.0,<3.0",
]
reports = [
    "weasyprint>=62.3",
]
torch = [
    "torch>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
